# mini-url-shorten

./: README.md  config.py  database.py  main.py  pyproject.toml  requirements.txt
models/: url_model.py
routes/: url_routes.py
schemas/: url_schema.py
service/: logger_serivce.py  url_service.py
templates/: 404.html  base.html  index.html  success.html
templates/static/css/: style.css
