[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "jinja2>=3.1.0",
    "pydantic-settings>=2.0.0",
    "pymongo>=4.16.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "shortuuid>=1.0.0",
    "uvicorn[standard]>=0.30.0",
]
